--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="tsoha">#284632</color>
+    <color name="delete_color_filter">#A5FF0000</color>
+    <color name="snag_callout_color">#F444</color>
     
 </resources>
