--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,5 +11,11 @@
         <item name="android:minWidth">192dp</item>
         <item name="android:maxWidth">192dp</item>
     </style>
+    
+    <style name="UICard" parent="@android:style/Widget.ImageButton">
+    	<item name="android:background">#00000000</item>
+    	<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 
 </resources>
