--- a/res/anim/left_to_original_pos.xml
+++ b/res/anim/left_to_original_pos.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" 
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shareInterpolator="false"
     android:startOffset="500" >
-    
-   <translate
+
+    <translate
         android:duration="500"
-        android:fromXDelta="100%p"
-        android:toXDelta="0%" 
-        android:interpolator="@android:anim/decelerate_interpolator" />
+        android:fromXDelta="-100%p"
+        android:toXDelta="0%" />
 
 </set>
