--- a/res/layout/dlg_finish.xml
+++ b/res/layout/dlg_finish.xml
@@ -20,11 +20,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/total_divider"
-        android:contentDescription="@string/divider"
-        android:src="@drawable/divider_trans" />
+        style="@style/divider_horizontal"
+        android:contentDescription="@string/divider" />
 
     <TextView
         android:id="@+id/dlg_finish_p2_name"
@@ -41,11 +38,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/total_divider"
-        android:contentDescription="@string/divider"
-        android:src="@drawable/divider_trans" />
+        style="@style/divider_horizontal"
+        android:contentDescription="@string/divider" />
 
     <TextView
         android:id="@+id/dlg_finish_winner"
@@ -55,12 +49,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/total_divider"
-        android:contentDescription="@string/divider"
-        android:src="@drawable/divider_trans" />
-
+        style="@style/divider_horizontal"
+        android:contentDescription="@string/divider" />
+
     <android.support.v7.widget.GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,30 +63,24 @@
         <!-- border left line -->
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="fill_parent"
+            style="@style/divider_vertical"
             app:layout_column="0"
             app:layout_columnSpan="1"
             app:layout_gravity="fill_vertical"
             app:layout_row="0"
             app:layout_rowSpan="9"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
 
         <!-- border top line -->
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
+            style="@style/divider_horizontal"
             app:layout_column="0"
             app:layout_columnSpan="7"
             app:layout_gravity="fill_horizontal"
             app:layout_row="0"
             app:layout_rowSpan="1"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -111,32 +96,25 @@
         <!-- line between Total/WinsPoints -->
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
+            style="@style/divider_horizontal"
             app:layout_column="0"
             app:layout_columnSpan="7"
             app:layout_gravity="fill_horizontal"
             app:layout_row="2"
             app:layout_rowSpan="1"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
 
         <!-- line between PlayerNames/Wins -->
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="fill_parent"
+            style="@style/divider_vertical"
             app:layout_column="2"
             app:layout_columnSpan="1"
             app:layout_gravity="fill_vertical"
             app:layout_row="3"
             app:layout_rowSpan="6"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
-
-        <TextView
+            android:contentDescription="@string/divider" />
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
@@ -152,17 +130,14 @@
         <!-- line between Wins/Points -->
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="fill_parent"
+            style="@style/divider_vertical"
             app:layout_column="4"
             app:layout_columnSpan="1"
             app:layout_gravity="fill_vertical"
             app:layout_row="3"
             app:layout_rowSpan="6"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
-
+            android:contentDescription="@string/divider" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -179,30 +154,24 @@
         <!-- border right line -->
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="fill_parent"
+            style="@style/divider_vertical"
             app:layout_column="6"
             app:layout_columnSpan="1"
             app:layout_gravity="fill_vertical"
             app:layout_row="0"
             app:layout_rowSpan="9"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
 
         <!-- line between WinsPoints/PlayerNames -->
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
+            style="@style/divider_horizontal"
             app:layout_column="0"
             app:layout_columnSpan="7"
             app:layout_gravity="fill_horizontal"
             app:layout_row="4"
             app:layout_rowSpan="1"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
 
         <TextView
             android:id="@+id/dlg_finish_border_p1_name"
@@ -243,16 +212,13 @@
         <!-- line between PlayerNames -->
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
+            style="@style/divider_horizontal"
             app:layout_column="0"
             app:layout_columnSpan="7"
             app:layout_gravity="fill_horizontal"
             app:layout_row="6"
             app:layout_rowSpan="1"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
 
         <TextView
             android:id="@+id/dlg_finish_border_p2_name"
@@ -293,16 +259,14 @@
         <!-- border bottom line -->
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
+            style="@style/divider_horizontal"
             app:layout_column="0"
             app:layout_columnSpan="7"
             app:layout_gravity="fill_horizontal"
             app:layout_row="8"
             app:layout_rowSpan="1"
-            android:background="@color/total_divider"
-            android:contentDescription="@string/divider"
-            android:src="@drawable/divider_trans" />
+            android:contentDescription="@string/divider" />
+        
     </android.support.v7.widget.GridLayout>
 
 </LinearLayout>
