--- a/res/layout/how_base.xml
+++ b/res/layout/how_base.xml
@@ -14,18 +14,17 @@
         android:layout_margin="@dimen/how_mid_btn_margin"
         android:contentDescription="@string/blank"
         android:src="@drawable/divider_trans" />
-
     <Button
         android:id="@+id/how_btn_prev"
         style="@style/how_button"
-        android:layout_alignTop="@id/mid"
+        android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@id/mid"
         android:text="@string/previous" />
 
     <Button
         android:id="@+id/how_btn_next"
         style="@style/how_button"
-        android:layout_alignTop="@id/mid"
+        android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/mid"
         android:text="@string/next" />
 
