--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -5,8 +5,8 @@
         
         <item>@string/mode_monkey</item>
 		<item>@string/mode_easy</item>
-<!--	<item>@string/mode_moderate</item>
-        <item>@string/mode_megamind</item>	 -->
+		<item>@string/mode_moderate</item>
+<!--    <item>@string/mode_megamind</item>	 -->
         
     </string-array>
     
@@ -14,8 +14,8 @@
         
         <item>0</item>
         <item>1</item>
-<!--    <item>2</item>
-        <item>3</item>		 -->
+	    <item>2</item>
+<!--    <item>3</item>		 -->
         
     </string-array>
     
