--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="how_btn_width">150dp</dimen>
     <dimen name="how_mid_btn_margin">2dp</dimen>
     <dimen name="how_tv_margin">20dp</dimen>
+    <dimen name="ad_top_bottom_margin">5dp</dimen>
+    <dimen name="dlg_ace_grid_padding">10dp</dimen>
 </resources>
