--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -1,20 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
-    android:id="@+id/RelativeLayout1"
+    android:id="@+id/menuLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/tsoha"
-    android:layoutAnimation="@anim/menu_in" >
+	android:layoutAnimation="@anim/menu_in" > 
+	<!-- --> 
     
-	<include 
-	    android:id="@+id/menu_base"
-		layout="@layout/menu_base"/>
+	<com.google.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="a15007e97f87daa"
+        ads:loadAdOnCreate="true"
+        ads:testDevices="TEST_EMULATOR" />
+
+ 	<ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="320dp"
+        android:layout_height="165dp"
+        android:layout_below="@id/adView"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/blank"
+        android:src="@drawable/ic_deck" />
+
+    <Button
+        android:id="@+id/btGame"
+        style="@style/menu_button"
+        android:layout_below="@id/imageView1"
+        android:text="@string/menu_btn_new_game" />
+
+    <Button
+        android:id="@+id/btPref"
+        style="@style/menu_button"
+        android:layout_below="@id/btGame"
+        android:text="@string/menu_btn_pref" />
+
+    <Button
+        android:id="@+id/btHow"
+        style="@style/menu_button"
+        android:layout_below="@id/btPref"
+        android:text="@string/menu_btn_how_to_play" />
 
     <Button
         android:id="@+id/btExit"
         style="@style/menu_button"
-        android:layout_below="@+id/menu_base"
+        android:layout_below="@id/btHow"
         android:text="@string/exit" />
+
+    <ImageButton
+        android:id="@+id/ibtAbout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btExit"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/sel_bkgr_touched"
+        android:contentDescription="@string/blank"
+        android:src="@drawable/about" />
 
 </RelativeLayout>
